--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static 'forum/css/main.css' %}">
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <link rel="shortcut icon" type="image/png" href="{% static 'forum/img/favicon.ico' %}"/>
+    <link rel="stylesheet" href="{% static 'forum/css/pagination.css' %}">
 </head>
 <body>
 <main>
