Added edit profile

--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -60,6 +60,7 @@
                 <div class="dropdown-content">
                     <a href="{% url 'forum:profile' user.username %}">Profile</a>
                     <a href="{% url 'forum:liked_posts' %}">Liked Posts</a>
+                    <a href="{% url 'forum:edit_profile' %}">Edit Profile</a>
                     <a href="{% url 'forum:logout' %}">Logout</a>
                 </div>
             </div>
