--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -61,6 +61,9 @@
                     <a href="{% url 'forum:profile' user.username %}">Profile</a>
                     <a href="{% url 'forum:liked_posts' %}">Liked Posts</a>
                     <a href="{% url 'forum:edit_profile' %}">Edit Profile</a>
+                    {% if user.is_staff %}
+                        <a href="/admin/">Admin Page</a>
+                    {% endif %}
                     <a href="{% url 'forum:logout' %}">Logout</a>
                 </div>
             </div>
