--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -17,6 +17,7 @@
     <div class="left-aside">
         {% block leftAside %}
             <h3>Following topics</h3>
+            <a class="popular_topics" href="{% url 'forum:popular_topics' %}">Popular Topics</a>
             {% if user.is_authenticated %}
                 {% if user.topic_followers.all %}
                     {% for topic in user.topic_followers.all %}
