--- a/forum/templates/forum/search.html
+++ b/forum/templates/forum/search.html
@@ -1,6 +1,9 @@
 {% extends 'forum/index.html' %}
 {% load static %}
 
+{% block leftAside %}
+{% endblock %}
+
 {% block articles %}
     <section>
         <div class="searchTab">
