--- a/forum/static/forum/css/pagination.css
+++ b/forum/static/forum/css/pagination.css
@@ -5,13 +5,21 @@
 }
 
 .paginator a {
-    background-color: white;
-    color: black;
+    background-color: #414059;
+    color: white;
     padding: 8px 16px;
-    border: 1px solid black;
+    border: 1px solid transparent;
     text-decoration: none;
 }
 
-.paginator .inactive {
-    background-color: #dfe3ee;
+.paginator .active:hover{
+    background-color: #A7A5E6;
+}
+
+.paginator a:nth-child(1){
+    border-radius: 5px 0 0 5px;
+}
+
+.paginator a:nth-child(5){
+    border-radius: 0 5px 5px 0;
 }
