Added social share

--- a/forum/templates/forum/cards/post_card.html
+++ b/forum/templates/forum/cards/post_card.html
@@ -20,6 +20,9 @@
     </div>
     <div class="textpost">
         <p class="postTitle">{{ post.title }}</p>
+        {% if post.text %}
+            <p class="postText">{{ post.text }}</p>
+        {% endif %}
         <div class="postmedia">
             {% if post.image %}
                 <img src="{{ post.image }}">
@@ -29,9 +32,6 @@
                 </iframe>
             {% endif %}
         </div>
-        {% if post.text %}
-            <p class="postText">{{ post.text }}</p>
-        {% endif %}
     </div>
     <div class="buttonspost">
         <form class="likeForm" method="post" action="{% url 'forum:api_like_toggle' %}" name="Post">
@@ -44,5 +44,6 @@
         <p name="Post{{ post.id }}" class="numberPizzas">{{ post.num_likes }} Like{{ post.num_likes|pluralize }}</p>
         <img src="{% static 'forum/img/comunicacoes.svg' %}" id="commenticon" style="margin-left: 20px">
         <p class="numberPizzas">{{ post.comment_set.count }} Comment{{ post.comment_set.count|pluralize }}</p>
+        {% include 'forum/widgets/share_button.html' %}
     </div>
 </article>
