--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -11,6 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <link rel="shortcut icon" type="image/png" href="{% static 'forum/img/favicon.ico' %}"/>
     <link rel="stylesheet" href="{% static 'forum/css/pagination.css' %}">
+    <link rel="stylesheet" href="{% static 'forum/css/share_button.css' %}">
 </head>
 <body>
 <main>
