--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -15,7 +15,7 @@
         {% else %}
             <p>Não há posts</p>
         {% endif %}
-        {% include 'forum/paginator.html' %}
+        {% include 'forum/widgets/paginator.html' %}
     </section>
 {% endblock articles %}
 
