--- a/forum/templates/forum/popular_topics.html
+++ b/forum/templates/forum/popular_topics.html
@@ -32,6 +32,7 @@
                     </div>
                 </article>
             {% endfor %}
+            {% include 'forum/widgets/paginator.html' %}
         {% else %}
             <div class="topDescription">
                 <div class="topic_left">
